# italy-geopop

./: .gitignore  .prettierignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: index.rst  requirements.txt
docs/material/: quick_usage.ipynb  tutorial_01.ipynb  utils.py
docs/source/: api.rst  bugs_and_issues.rst  complete_guide.rst  conf.py  contributes.rst  faq.rst  index.rst  installation.rst  license.rst  main_features.rst  usage.rst
docs/source/_static/assets/: open_data_italy_hospitals_beds_2019.csv  quick_usage_01.csv  quick_usage_02.csv  quick_usage_03.csv  quick_usage_04.csv  tut_01_table_00.csv  tut_01_table_01.csv  tut_01_table_02.csv  tut_01_table_03.csv  tut_01_table_04.csv  tut_01_table_05.csv
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
italy_geopop/: __init__.py  __version__.py  _decorators.py  _utils.py  decorators.py  geopop.py  italy_geo_pop_municipalities.csv  pandas_extension.py
italy_geopop/data/: 2022_italy_geo_provinces.feather  2022_italy_geo_regions.feather  2022_italy_municipalities.feather  2022_italy_provinces.feather  2023_italy_geo_provinces.feather  2023_italy_geo_regions.feather  2023_italy_municipalities.feather  2023_italy_provinces.feather  2023_italy_regions.feather  italy_municipalities_2022.feather  italy_provinces_2022.feather  italy_regions_2022.feather
tests/: helper.py  test_geopop.py  test_pandas_extension.py  test_pandas_extension_from_municipality.py  test_pandas_extension_from_province.py  test_pandas_extension_from_region.py  test_pandas_extension_with_geometry.py  test_pandas_extension_without_geometry.py
